server/compilers/goLiteJS/src/test/ml1/invalid/decl11.go
// no name or expression
package main

var int
